--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+        <img src="./assets/profilepic.jpeg" alt="John Doe profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Nonglen Aditya Singha-220106051.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/nonglen-aditya-singha-00a030247/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Adi21032004'"
           />
         </div>
       </div>
@@ -100,7 +100,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>BTech in Bioscience and Bioengineering</p>
             </div>
           </div>
           <div class="text-container">
@@ -159,7 +159,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>React</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -171,7 +171,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -245,6 +245,28 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              <article></article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Nextjs</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article></article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDb</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
             </div>
           </div>
         </div>
@@ -273,13 +295,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Adi21032004/Next-js'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://givefeedback-psi.vercel.app/'"
               >
                 Live Demo
               </button>
@@ -297,7 +319,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Adi21032004/dApp'"
               >
                 Github
               </button>
@@ -327,7 +349,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Adi21032004/muxic'"
               >
                 Live Demo
               </button>
@@ -352,7 +374,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:nonglenadi@gmail.com">nonglenadi@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +382,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="linkedin.com/in/nonglen-aditya-singha-00a030247/">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -375,7 +397,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Nonglen Aditya Singha. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
