--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/profilepic2.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>1+ years <br />Full Stack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -105,12 +105,16 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I am a dedicated and passionate student currently 
+              pursuing a degree in Biosciences and Bioengineering at IIT Guwahati. 
+              My academic journey has equipped me with a strong foundation in the biological sciences, 
+              coupled with an in-depth understanding of engineering principles. 
+              This unique combination allows me to approach problems with a holistic perspective,
+               bridging the gap between biology and technology.
+              In addition to my studies, I have a keen interest in Full Stack Development. 
+              I am proficient in various programming languages and frameworks, which enables me to develop 
+              robust and scalable web applications. My experience spans both front-end and back-end development, 
+              where I enjoy creating intuitive user interfaces as well as designing efficient server-side architectures.
             </p>
           </div>
         </div>
@@ -199,7 +203,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -245,7 +249,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article></article>
+              <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -256,7 +260,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article></article>
+              <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
