--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profilepic.jpeg" alt="John Doe profile picture" />
+        <img src="./assets/profilepic.jpeg" alt="Nonglen Aditya Singha profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -386,7 +386,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="linkedin.com/in/nonglen-aditya-singha-00a030247/">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/nonglen-aditya-singha-00a030247/">LinkedIn</a></p>
         </div>
       </div>
     </section>
